# mkxray

./: .gitignore  app.go  go.mod  job.go  mkxray.go  ui.go
.github/workflows/: build.yml  ci.yml  go.yml
app/: go.mod  mkxray.go  ui.go
streamlit/: pyproject.toml
streamlit-app/: pyproject.toml
streamlit-app/src/streamlit-app/: app.py
