[project]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Kosarev",email = "rmksrv@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "streamlit-app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
